# Gist_of_Rust

./: .gitignore  README.md
Day1/ex_2/src/: main.rs
Day1/ex_3/src/: main.rs
Day1/ex_4/src/: main.rs
Day2/ex_1/src/: main.rs
Day2/ex_2/src/: main.rs
Day3/ex_1/src/: main.rs
Day3/ex_2/src/: main.rs
Day4/ex_2/: Cargo.toml
Day4/ex_2/src/: main.rs
Day7/ex_3/: Cargo.toml
Day7/ex_3/src/: main.rs
R5_Entry/Day1/ex_1/src/: main.rs
R5_Entry/Day2/ex_3/src/: main.rs
R5_Entry/Day4/ex_1/src/: main.rs
R5_Entry/Day5/ex_1/src/: main.rs
R5_Entry/Day5/ex_2/: Cargo.toml
R5_Entry/Day5/ex_2/src/: main.rs
R5_Entry/Day6/ex_1/src/: main.rs
R5_Entry/Day6/ex_2/src/: main.rs
R5_Entry/Day6/ex_3/src/: main.rs
R5_Entry/Day7/ex_1/src/: main.rs
R5_Entry/Day7/ex_2/: Cargo.toml
R5_Entry/Day7/ex_2/src/: main.rs
r3_advanced/deref_coercions/src/: main.rs
r3_advanced/lifetimes/src/: main.rs
r3_advanced/ref/: Cargo.toml
r3_advanced/ref/src/: main.rs
r3_advanced/refcell/src/: main.rs
r4_basic/fetch_handle_thiserror/: Cargo.toml
r4_basic/fetch_handle_thiserror/src/: foo.json  main.rs
r4_basic/fetch_json_reqwest/: Cargo.toml
r4_basic/fetch_json_reqwest/src/: main.rs
r4_basic/fetch_multiple_futures/: Cargo.toml
r4_basic/fetch_multiple_futures/src/: foo.json  main.rs
r4_basic/fetch_multiple_tokio/: Cargo.toml
r4_basic/fetch_multiple_tokio/src/: bar.json  main.rs
r4_basic/handle_multiple_result_option/: Cargo.toml
r4_basic/handle_multiple_result_option/src/: main.rs
r4_basic/parse_json_serde/: Cargo.toml
r4_basic/parse_json_serde/src/: main.rs
