[package]
name = "fetch_handle_thiserror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use No-std support https://serde.rs/no-std.html
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

# Use foe fetch, feature `json` for load json, `rustls-tls` for load via `TLS`.
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }

# Use for handy return Result.
anyhow = "1.0.65"

# Use for async.
tokio = { version ="1.22", features = ["full"] }
thiserror = "1.0.50"